@@ -1,5 +1,13 @@
 2007-12-30  Neal H. Walfield  <neal@gnu.org>
 
+	* zalloc.h: Don't include <l4.h>.  Include <stdint.h>.  Replace
+	use of l4 types with standard C types.
+	* zalloc.c: Include <stdint.h> and <l4/math.h>.  Replace use of l4
+	types with standard C types.
+	(zone): Don't explicitly initialize to 0.
+
+2007-12-30  Neal H. Walfield  <neal@gnu.org>
+
 	* memory.c (memory_add): Don't add the page at address 0 to the
 	free pool.
 
